feat: lista de produtos
